# optical-context-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  publish-pypi.yml
optical_mcp/: __init__.py  mistral_client.py  models.py  recomposition.py  server.py  service.py  storage.py
tests/: test_server_tools.py  test_storage.py
