[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optical-context-mcp"
version = "0.1.0"
description = "FastMCP server for compressing large OCR-heavy PDFs into dense packed images for agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Christopher Boebel" }]
keywords = ["mcp", "fastmcp", "ocr", "pdf", "vision", "document-processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastmcp>=3.1.0",
  "mistralai>=1.12.0",
  "Pillow>=12.0.0",
  "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["optical_mcp*"]

[project.urls]
Repository = "https://github.com/ChrBoebel/optical-context-mcp"
Issues = "https://github.com/ChrBoebel/optical-context-mcp/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
